--- a/gradle.properties
+++ b/gradle.properties
@@ -56,7 +56,7 @@ mod_group_id=net.redfox.metalica
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=RedFox86
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Adds a various assortment of metals
+mod_description=Adds a various assortment of metals to the game
 
 mantle_version=1.11.36
 tconstruct_version=3.9.1.19
